--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@poppanator/sveltekit-svg": "^4.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -21,6 +22,7 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
@@ -30,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.5.0",
-		"effector": "^22.8.6"
+		"effector": "^22.8.6",
+		"svrollbar": "^0.12.0"
 	}
 }
