--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,7 @@
 		"sourceMap": true,
 		"strict": true,
 		"baseUrl": "types",
-    "typeRoots": ["types"],
+		"typeRoots": ["types"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
