Flow of interval has been changed and github action added for client

--- a/.github/workflows/checkServer.yml
+++ b/.github/workflows/checkServer.yml
@@ -1,9 +1,9 @@
-name: Lint server
+name: Check server
 
 on: push
 
 jobs:
-  lint:
+  lint-server:
     runs-on: self-hosted
     steps:
       - name: Checkout branch
